# yas

./: .gitignore  Cargo.toml  README.en.md  README.md
src/: chat.rs  defs.rs  main.rs
src/tools/: mod.rs  read_fs.rs  search_fs.rs
src/www/: index.html  main.js  style.css
