[package]
name = "yas"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
dotenv = "0.15.0"
glob = "0.3.2"
google-ai-rs = "0.1.1"
http = "1.3.1"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.16", features = ["full"] }
hyper = { version = "1.6.0", features = ["full"] }
lazy_static = "1.5.0"
libc = "0.2.174"
prost-types = "0.13.5"
serde = "1.0.219"
serde_json = "1.0.142"
tokio-stream = "0.1.17"
tokio = { version = "1.47.1", features = ["full"] }
